# jman

./: .pylintrc  Makefile  README.rst  setup.cfg
jman/: __init__.py  client.py  current_job.py  job.py  manager.py  mod_func_loader.py  server.py  serverd.py
tests/: job_test.py  manager_test.py  standalone_job_test.py  standalone_target.py
