[metadata]
name = jman
version = 0.1.1
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Job manager with queryable server.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = jman job management
url = https://github.com/tgree/jman
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: POSIX
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = jman
install_requires =
    pyreap >= 0.9.1
    requests

[options.entry_points]
console_scripts =
    jman_serverd = jman.serverd:_main
